# clipp

./: .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  TODO.md  clipp.slnx  mac-keychain-prompts.patch  xcode.sh
.github/workflows/: _release.yml  homebrew-tap.yml  ios-ci.yml  linux-ci.yml  macos-ci.yml  release-manual.yml  release-tag.yml  release.yml  windows-ci.yml  winget.yml
clipp-win32/: Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  ClipboardData.h  ClipboardNotificationThread.cpp  ClipboardNotificationThread.h  ClipboardNotificationWindow.cpp  ClipboardNotificationWindow.h  CryptoChannel.cpp  CryptoChannel.h  KeyManager.cpp  KeyManager.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  MDNSThread.cpp  MDNSThread.h  Peer.cpp  Peer.h  PeerManager.cpp  PeerManager.h  Settings.cpp  Settings.h  clipp-win32.cpp  clipp-win32.vcxproj  clipp-win32.vcxproj.filters  clipp.cpp  platform_win32_Clipboard.cpp  platform_win32_Clipboard.h  vcpkg.json
clipp.ios/clipp.ios/: ContentView.swift  clipp_iosApp.swift
clipp.ios/clipp.ios.xcodeproj/: project.pbxproj
docs/: FILES-PLAN.md  REGISTERS-PLAN.md  SECURITY-MODEL.md
ios/: Info.plist
ios/Clipp/: Clipp.entitlements
ios/Clipp.xcodeproj/: project.pbxproj
ios/Clipp.xcodeproj/xcshareddata/xcschemes/: Clipp.xcscheme  ClippShareExtension.xcscheme
ios/Clipp/App/: ClippApp.swift
ios/Clipp/Bridge/: ClippBridge.h  ClippBridge.mm  ClippCryptoChannelCore.mm  ClippListenerCore.mm  ClippLoggerCore.mm  ClippMDNSCore.mm  ClippNetworkGlobals.mm  ClippNetworkRuntimeCore.mm  ClippPeerCore.mm  ClippPeerDisplayCore.mm  ClippPeerManagerCore.mm  ClippSharedCore.mm
ios/Clipp/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Clipp/Resources/Assets.xcassets/ClippAboutArtwork.imageset/: Contents.json
ios/Clipp/UI/: AppPanelViews.swift  ContentView.swift
ios/ClippShareExtension/: ClippShareBridge.h  ClippShareBridge.mm  ClippShareCore.mm  ClippShareExtension.entitlements  Info.plist  ShareViewController.swift
packaging/: README.md  nfpm.yaml
scripts/: build_ios.sh  build_ios_appstore.sh  build_linux.sh  build_macos.sh  build_macos_mas.sh  build_windows.ps1  bump_version.sh  install.sh  package_linux.sh  package_windows_msix.ps1  setup_ios_vcpkg.sh  sign_notarize_macos_app.sh  test_registers.ps1  test_registers.sh  test_registers_mesh.ps1  test_registers_mesh.sh
src/: BlockingQueue.h  Cli.cpp  Cli.h  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  Clipboard.h  ClipboardActions.cpp  ClipboardActions.h  ClipboardActivityDisplay.cpp  ClipboardActivityStore.cpp  ClipboardActivityStore.h  ClipboardData.h  ClipboardFlowUi.cpp  ClipboardFlowUi.h  ClipboardFormat.h  ClipboardHashGuard.cpp  ClipboardHashGuard.h  ClipboardLimits.h  ClipboardPayload.h  ClipboardWire.cpp  ClipboardWire.h  ClippGlyphBadge.h  ClippGlyphBadge.mm  CryptoChannel.cpp  CryptoChannel.h  Hlc.cpp  Hlc.h  HostId.h  KeyManager.cpp  KeyManager.h  Listener.cpp  Listener.h  LocalPeerName.h  Logger.cpp  Logger.h  MDNSDiscovery.h  MDNSDiscovery_Apple.mm  MDNSDiscovery_Linux.cpp  (+86 more)
src/clipp-win32-darkmode32/: DarkMessageBox.cpp  darkmode32.vcxproj
src/clipp-win32-shim/: clipp-win32-shim.cpp  clipp-win32-shim.rc  clipp-win32-shim.vcxproj  clipp-win32-shim.vcxproj.filters  resource.h
src/macos/: Info.plist.in
src/platform/: LogPaths.h  uiClippPage.h  uiSettingsPage.h  uistrings.h
src/platform/ios/: Settings.mm
src/platform/linux/: Settings.cpp
src/platform/macos/: AboutPage.h  AboutPage.mm  AppMenu.mm  CliPathBanner.h  CliPathBanner.mm  Clipboard.mm  Clipp.entitlements  Clipp.mas.entitlements  ClippPage.h  ClippPage.mm  Info.plist.in  KeyVendIpc.h  KeyVendIpc.mm  LogPaths.mm  NetworkItem.h  NetworkItem.mm  NetworkPage.h  NetworkPage.mm  NetworkView.h  NetworkView.mm  PopupPanel.h  PopupPanel.mm  Settings.mm  SettingsPage.h  SettingsPage.mm  SingleInstance.mm  TerminalLogView.h  TerminalLogView.mm  UiHelpers.h  UiHelpers.mm
src/platform/win32/: AboutPage.cpp  AboutPage.h  AutoStart.cpp  AutoStart.h  Clipboard.cpp  ClippPage.cpp  ClippPage.h  CrashHandler.cpp  CrashHandler.h  LogPaths.cpp  LogsPage.cpp  LogsPage.h  NetworkItem.cpp  NetworkItem.h  NetworkPage.cpp  NetworkPage.h  NetworkView.cpp  NetworkView.h  PlaceholderPage.cpp  PlaceholderPage.h  PopupWindow.cpp  PopupWindow.h  SettingsPage.cpp  SettingsPage.h  SymbolGlyphs.cpp  SymbolGlyphs.h  TerminalLogView.cpp  TerminalLogView.h  XamlImage.h  tray.cpp  xaml_dialog.cpp  xaml_dialog.h
src/platform/win32/msix/: AppxManifest.xml.in
src/resources/: Clipp.icns
src/vcpkg-triplets/: arm64-ios-simulator.cmake  arm64-ios.cmake
tests/: CMakeLists.txt  test_binary_registers.cpp  test_clipboard_activity_store.cpp  test_hlc.cpp  test_main.cpp  test_popup_model.cpp  test_register_store.cpp  test_register_wire.cpp
tools/symbols/: build_symbols_font.py  manifest.json
